# MetalRast

./: .gitignore  CMakeLists.txt  README.md  how_to_run.md
Launch Camera Angles/: komainu_kobe_60m.cam  zorah_main_public.v2.cam
shaders/: MetalRast.metal  SharedTypes.h
src/: Camera.cpp  Camera.h  GLBLoader.cpp  GLBLoader.h  Mesh.cpp  Mesh.h  MeshRegistry.cpp  MeshRegistry.h  MetalRastRenderer.cpp  MetalRastRenderer.h  TextureLoader.cpp  TextureLoader.h  ThreadPool.h  main.cpp
src/ui/: DebugPanels.cpp  DebugPanels.h  ImGuiHost.h  ImGuiHost.mm  InteractiveApp.cpp  InteractiveApp.h  OrbitCamera.cpp  OrbitCamera.h  Window.h  Window.mm
